src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_3_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "double",
    },
    Assign,
    Function,
    OpeningRoundBracket,
    Identifier {
        literal: "x",
    },
    ClosingRoundBracket,
    OpeningCurlyBracket,
    Identifier {
        literal: "x",
    },
    Multiply,
    Integer {
        literal: 2,
    },
    ClosingCurlyBracket,
    SemiColon,
    EndOfFile,
]
