src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_3_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "double",
            expression: Function {
                parameters: [
                    "x",
                ],
                block: Block {
                    nodes: [
                        Expression {
                            expression: Infix {
                                left_hand: Identifier {
                                    identifier: "x",
                                },
                                operator: Multiply,
                                right_hand: Integer {
                                    literal: 2,
                                },
                            },
                        },
                    ],
                },
            },
        },
    },
]
