src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_5_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "a": Integer {
                value: 5,
            },
        },
        sub_environment: None,
    },
}
