src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_5_lexical_analysis.snap
---
source: src/tests/mod.rs
expression: tokens

---
[
    Let,
    Identifier {
        literal: "a",
    },
    Assign,
    Integer {
        literal: 5,
    },
    SemiColon,
    EndOfFile,
]
