src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_5_syntax_analysis.snap
---
source: src/tests/mod.rs
expression: abstract_syntax_tree

---
[
    Statement {
        statement: Let {
            identifier: "a",
            expression: Integer {
                literal: 5,
            },
        },
    },
]
