src/tests/snapshots/monkey_interpreter__tests__test_let_statement_case_6_environment.snap
---
source: src/tests/mod.rs
expression: evaluator

---
Evaluator {
    environment: Environment {
        variables: {
            "a": Integer {
                value: 25,
            },
            "b": Integer {
                value: 91,
            },
        },
        sub_environment: None,
    },
}
